# LRAGE

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  lrage_gui.py  pyproject.toml  run_gui.sh
.github/workflows/: build-webui.yml  ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  mutations.ts  queries.ts  stream.ts  types.ts
frontend/src/hooks/: useLocalDraft.ts  useSortableColumns.ts  useTheme.ts
frontend/src/lib/: argsString.test.ts  argsString.ts  experiment.test.ts  experiment.ts
frontend/src/pages/: ComparePage.tsx  NewRunPage.tsx  RunDetailPage.tsx  RunsPage.tsx
frontend/src/schemas/: runConfig.test.ts  runConfig.ts
lrage/: __init__.py  __main__.py  evaluator.py  evaluator_utils.py  lrage_gui.py  utils.py
lrage/api/: filter.py  metrics.py  model.py  registry.py  reranker.py  retriever.py  task.py
lrage/caching/: cache.py
lrage/filters/: __init__.py  decontamination.py  extraction.py  selection.py  transformation.py
lrage/gui/: lrage_gui.py
lrage/gui/gui_utils/: evaluation.py  gui_args.yaml  tasks.py  utils.py
lrage/loggers/: evaluation_tracker.py  wandb_logger.py
lrage/models/: __init__.py  anthropic_llms.py  dummy.py  gguf.py  huggingface.py  mamba_lm.py  nemo_lm.py  neuralmagic.py  neuron_optimum.py  openai_completions.py  optimum_lm.py  sglang_causallms.py  smolagents_lm.py  textsynth.py  utils.py  vllm_causallms.py
lrage/prompts/: __init__.py
lrage/rerankers/: __init__.py  rerankers_reranker.py
lrage/retrievers/: __init__.py  pyserini_retriever.py
lrage/tasks/: README.md  __init__.py
lrage/tasks/barexam_qa/: barexam_qa.yaml  barexam_qa_generative.yaml
lrage/tasks/bbh/: _generate_configs.py
lrage/tasks/belebele/: _generate_configs.py
lrage/tasks/biglawbench/: biglawbench.yaml
lrage/tasks/ceval/: _generate_configs.py
lrage/tasks/cmmlu/: _generate_configs.py
lrage/tasks/hendrycks_math/: README.md
lrage/tasks/housing_qa/: housing_qa.yaml  housing_qa_generative.yaml  utils.py
lrage/tasks/lawbench/: README.md  lawbench.yaml  lawbench_1_2_zeroshot.yaml  utils_lawbench.py  (+9 more)
lrage/tools/: __init__.py  reranker_tool.py  retriever_tool.py
lrage/webapp/: __init__.py  __main__.py  app.py  cli.py  presets.py  registry_meta.py  schemas.py  settings.py
tests/webapp/: conftest.py  test_cancellation.py  test_compare.py  test_events_sse.py  test_meta.py  test_progress_unit.py  test_results.py  test_runs_lifecycle.py  test_samples.py  test_worker.py
(+1512 files in other folders)
